ikubernetes_1.15.7/user-kubernetes/ingress/port-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: port-ingress
spec:
  backend:
    serviceName: port-ingress-service
    servicePort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: port-ingress-service
spec:
  selector:
    app: port-ingress
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: port-ingress-deployment
spec:
  selector:
    matchLabels:
      app: port-ingress
  replicas: 2
  template:
    metadata:
      labels:
        app: port-ingress
    spec:
      containers:
      - name: myapp
        image: ikubernetes/myapp:v1
